// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`report > json 1`] = `
"[
    {
        "file": "foo.js",
        "raw": 123456,
        "gzip": 5661,
        "brotli": 123
    },
    {
        "file": "some/sub/path/bar.md",
        "raw": 445123,
        "gzip": 82734,
        "brotli": 28372
    },
    {
        "file": "another/folder/baz.js",
        "raw": 1234,
        "gzip": 5678,
        "brotli": null
    },
    {
        "file": "simple.file.ts",
        "raw": 1234,
        "gzip": null,
        "brotli": 5677
    },
    {
        "file": "test/package.json",
        "raw": 4444,
        "gzip": null,
        "brotli": null
    }
]"
`;

exports[`report > pretty 1`] = `
"foo.js                120.56 KB │ gzip:  5.53 KB │ brotli: 123.00  B
some/sub/path/bar.md  434.69 KB │ gzip: 80.79 KB │ brotli:  27.71 KB
another/folder/baz.js   1.21 KB │ gzip:  5.54 KB
simple.file.ts          1.21 KB │ brotli:   5.54 KB
test/package.json       4.34 KB"
`;

exports[`report > pretty with total size 1`] = `
"foo.js                120.56 KB │ gzip:  5.53 KB │ brotli: 123.00  B
some/sub/path/bar.md  434.69 KB │ gzip: 80.79 KB │ brotli:  27.71 KB
another/folder/baz.js   1.21 KB │ gzip:  5.54 KB
simple.file.ts          1.21 KB │ brotli:   5.54 KB
test/package.json       4.34 KB
Total:                562.00 KB │ gzip: 91.87 KB │ brotli:  33.37 KB"
`;
